A set of changes aiming to make the Event Scheduler more user-friendly when there are no up-to-date system tables to support it:  - initialize the scheduler before reporting "Ready for connections".    This ensures that warnings, if any, are printed before "Ready for    connections", and this message is not mangled.  - do not abort the scheduler if there are no system tables  - check the tables once at start up, remember the status and disable    the scheduler if the tables are not up to date.    If one attempts to use the scheduler with bad tables,    issue an error message.  - clean up the behaviour of the module under LOCK TABLES and pre-locking    mode  - make sure implicit commit of Events DDL works as expected.  - add more tests

Collateral clean ups in the events code.

This patch fixes Bug#23631 Events: SHOW VARIABLES doesn't work 
when mysql.event is damaged